Pesan commit Anda di sini

--- a/menut.html
+++ b/menut.html
@@ -54,7 +54,7 @@
         <div class="cart-item">
           <img src="img/products/cleo.jpeg" alt="Product 1" />
           <div class="item-detail">
-            <h3>Cleo Galon</h3>
+            <h3>Cleo Galonn</h3>
             <div class="item-price">IDR 20K</div>
           </div>
           <i data-feather="trash-2" class="remove-item"></i>
