Pesan commit Anda di sini

--- a/index.html
+++ b/index.html
@@ -221,9 +221,7 @@
         </div>
       </div>
       <div class="product-nm">
-        <a
-          href="https://revealdone.github.io/warungpaktoni/#"
-          class="product-nm"
+        <a href="https://revealdone.github.io/warungpaktoni/" class="product-nm"
           ><h1>Kembali Ke Awal</h1></a
         >
       </div>
@@ -231,12 +229,6 @@
         ><h1>Menuju ke Dokumentasi</h1></a
       >
     </section>
-    <!-- Menu Section end -->
-    <!-- About Section end -->
-
-    <!-- Contact Section start -->
-    <!-- Contact Section end -->
-
     <!-- Footer start -->
     <footer>
       <div class="socials">
