Pesan commit Anda di sini

--- a/index.html
+++ b/index.html
@@ -134,7 +134,6 @@
       <!-- Shopping Cart end -->
     </nav>
     <!-- Navbar end -->
-
     <!-- Hero Section start -->
     <!-- Menu Section start -->
     <section id="menu" class="menu">
@@ -147,87 +146,90 @@
         terbaik demi kenyamanan dan kebahagiaan Anda. Bersama kami, Anda bukan
         sekadar pelanggan, tetapi juga keluarga.
       </p>
-
-      <div class="row">
-        <div class="menu-card">
-          <img
-            src="/img/products/gas3.jpg"
-            alt="Espresso"
-            class="menu-card-img"
-          />
-          <h3 class="menu-card-title">- Gas 3kg -</h3>
-          <p class="menu-card-price">IDR 20K</p>
-          <a href="https://wa.link/y11om5"><h1>Buy</h1></a>
+      <section id="menu" class="menu">
+        <div class="row">
+          <div class="menu-card">
+            <img
+              src="/img/products/gas3.jpg"
+              alt="Espresso"
+              class="menu-card-img"
+            />
+            <h3 class="menu-card-title">- Gas 3kg -</h3>
+            <p class="menu-card-price">IDR 20K</p>
+            <a href="https://wa.link/y11om5"><h1>Buy</h1></a>
+          </div>
+          <div class="menu-card">
+            <img
+              src="/img/products/gas12.jpg"
+              alt="Espresso"
+              class="menu-card-img"
+            />
+            <h3 class="menu-card-title">- Gas 12kg -</h3>
+            <p class="menu-card-price">IDR 230K</p>
+            <a href="https://wa.link/jv2jd6"><h1>Buy</h1></a>
+          </div>
+          <div class="menu-card">
+            <img
+              src="/img/products/aq.jpg"
+              alt="Espresso"
+              class="menu-card-img"
+            />
+            <h3 class="menu-card-title">- Aqua Galon -</h3>
+            <p class="menu-card-price">IDR 20K</p>
+            <a href="https://wa.link/3jv021"><h1>Buy</h1></a>
+          </div>
+          <div class="menu-card">
+            <img
+              src="/img/products/cleo.jpeg"
+              alt="Espresso"
+              class="menu-card-img"
+            />
+            <h3 class="menu-card-title">- Cleo Galon -</h3>
+            <p class="menu-card-price">IDR 20K</p>
+            <a href="https://wa.link/e0ztx1"><h1>Buy</h1></a>
+          </div>
+          <div class="menu-card">
+            <img
+              src="/img/products/pulsa.png"
+              alt="Espresso"
+              class="menu-card-img"
+            />
+            <h3 class="menu-card-title">- All Operator -</h3>
+            <p class="menu-card-price">IDR 12/22/27/32/52K dll</p>
+            <a href="https://wa.link/rlfdez"><h1>Buy</h1></a>
+          </div>
+          <div class="menu-card">
+            <img
+              src="/img/products/ngaji.png"
+              alt="Espresso"
+              class="menu-card-img"
+            />
+            <h3 class="menu-card-title">- Mengaji -</h3>
+            <p class="menu-card-price"></p>
+            <a href="https://wa.link/wx59zi"><h1>Ikut sekarang</h1></a>
+          </div>
+          <div class="menu-card">
+            <img
+              src="/img/products/listrik.png"
+              alt="Espresso"
+              class="menu-card-img"
+            />
+            <h3 class="menu-card-title">- Benerin Listrik -</h3>
+            <p class="menu-card-price"></p>
+            <a href="https://wa.link/havs5o"><h1>Telpon Sekarang</h1></a>
+          </div>
         </div>
-        <div class="menu-card">
-          <img
-            src="/img/products/gas12.jpg"
-            alt="Espresso"
-            class="menu-card-img"
-          />
-          <h3 class="menu-card-title">- Gas 12kg -</h3>
-          <p class="menu-card-price">IDR 230K</p>
-          <a href="https://wa.link/jv2jd6"><h1>Buy</h1></a>
+        <div class="product-nm">
+          <a
+            href="https://revealdone.github.io/warungpaktoni/"
+            class="product-nm"
+            ><h1>Kembali Ke Awal</h1></a
+          >
         </div>
-        <div class="menu-card">
-          <img
-            src="/img/products/aq.jpg"
-            alt="Espresso"
-            class="menu-card-img"
-          />
-          <h3 class="menu-card-title">- Aqua Galon -</h3>
-          <p class="menu-card-price">IDR 20K</p>
-          <a href="https://wa.link/3jv021"><h1>Buy</h1></a>
-        </div>
-        <div class="menu-card">
-          <img
-            src="/img/products/cleo.jpeg"
-            alt="Espresso"
-            class="menu-card-img"
-          />
-          <h3 class="menu-card-title">- Cleo Galon -</h3>
-          <p class="menu-card-price">IDR 20K</p>
-          <a href="https://wa.link/e0ztx1"><h1>Buy</h1></a>
-        </div>
-        <div class="menu-card">
-          <img
-            src="/img/products/pulsa.png"
-            alt="Espresso"
-            class="menu-card-img"
-          />
-          <h3 class="menu-card-title">- All Operator -</h3>
-          <p class="menu-card-price">IDR 12/22/27/32/52K dll</p>
-          <a href="https://wa.link/rlfdez"><h1>Buy</h1></a>
-        </div>
-        <div class="menu-card">
-          <img
-            src="/img/products/ngaji.png"
-            alt="Espresso"
-            class="menu-card-img"
-          />
-          <h3 class="menu-card-title">- Mengaji -</h3>
-          <p class="menu-card-price"></p>
-          <a href="https://wa.link/wx59zi"><h1>Ikut sekarang</h1></a>
-        </div>
-        <div class="menu-card">
-          <img
-            src="/img/products/listrik.png"
-            alt="Espresso"
-            class="menu-card-img"
-          />
-          <h3 class="menu-card-title">- Benerin Listrik -</h3>
-          <p class="menu-card-price"></p>
-          <a href="https://wa.link/havs5o"><h1>Telpon Sekarang</h1></a>
-        </div>
-      </div>
-      <div class="product-nm">
-        <a href="https://revealdone.github.io/warungpaktoni/" class="product-nm"
-          ><h1>Kembali Ke Awal</h1></a
+        <a href="/prodak.html" class="product-nm"
+          ><h1>Menuju ke Dokumentasi</h1></a
         >
-      </div>
-      <a href="/prodak.html" class="product-nm"
-        ><h1>Menuju ke Dokumentasi</h1></a
-      >
+      </section>
     </section>
     <!-- Footer start -->
     <footer>
