Pesan commit Anda di sini

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             ><h1>Kembali Ke Awal</h1></a
           >
         </div>
-        <a href="/prodak.html" class="product-nm"
+        <a href="https://revealdone.github.io/dokumen/" class="product-nm"
           ><h1>Menuju ke Dokumentasi</h1></a
         >
       </section>
