--- a/index.html
+++ b/index.html
@@ -52,85 +52,7 @@
       <!-- Search Form end -->
 
       <!-- Shopping Cart start -->
-      <div class="shopping-cart" id="#belanja">
-        <div class="cart-item">
-          <img src="img/products/cleo.jpeg" alt="Product 1" />
-          <div class="item-detail">
-            <h3>Cleo Galon</h3>
-            <div class="item-price">IDR 20K</div>
-          </div>
-          <a href="https://wa.link/e0ztx1">
-            <i data-feather="trash-2" class="remove-item"></i
-          ></a>
-        </div>
-        <div class="cart-item">
-          <img src="img/products/gas3.jpg" alt="Product 1" />
-          <div class="item-detail">
-            <h3>Gas 3KG</h3>
-            <div class="item-price">IDR 20K</div>
-          </div>
-          <a href="https://wa.link/y11om5">
-            <i data-feather="trash-2" class="remove-item"></i
-          ></a>
-        </div>
-        <div class="cart-item">
-          <img src="img/products/gas12.jpg" alt="Product 1" />
-          <div class="item-detail">
-            <h3>Gas 12KG</h3>
-            <div class="item-price">IDR 230K</div>
-          </div>
-          <a href="https://wa.link/jv2jd6">
-            <i data-feather="trash-2" class="remove-item"></i
-          ></a>
-        </div>
-        <div class="cart-item">
-          <img src="img/products/aq.jpg" alt="Product 1" />
-          <div class="item-detail">
-            <h3>Aqua Galon</h3>
-            <div class="item-price">IDR 20K</div>
-          </div>
-          <a href="https://wa.link/3jv021">
-            <i data-feather="trash-2" class="remove-item"></i
-          ></a>
-        </div>
-        <div class="cart-item">
-          <img src="img/products/pulsa.png" alt="Product 1" />
-          <div class="item-detail">
-            <h3>Pulsa All Operator</h3>
-            <div class="item-price">IDR 12/22/27/32K dst.</div>
-          </div>
-          <a href="https://wa.link/rlfdez">
-            <i data-feather="trash-2" class="remove-item"></i
-          ></a>
-        </div>
-        <div class="cart-item">
-          <img src="img/products/listrik.png" alt="Product 1" />
-          <div class="item-detail">
-            <h3>Maintenance Listrik</h3>
-            <div class="item-price">IDR ~`0K</div>
-          </div>
-          <a href="https://wa.link/havs5o">
-            <i data-feather="trash-2" class="remove-item"></i
-          ></a>
-        </div>
-        <div class="cart-item">
-          <img src="img/products/ngaji.png" alt="Product 1" />
-          <div class="item-detail">
-            <h3>Mengaji</h3>
-            <div class="item-price">Berminat?</div>
-          </div>
-          <a href="https://wa.link/wx59zi">
-            <i data-feather="trash-2" class="remove-item"></i
-          ></a>
-        </div>
-        <div class="cart-item">
-          <img src="" alt="" />
-          <div class="item-detail">
-            <h3>Beli Sekarang</h3>
-            <div class="item-price">klik Gambar tong untuk membeli</div>
-          </div>
-        </div>
-      </div>
+
       <!-- Shopping Cart end -->
     </nav>
     <!-- Navbar end -->
@@ -232,7 +154,24 @@
       </section>
     </section>
     <!-- Footer start -->
+    <footer>
+      <div class="socials">
+        <a href="#"><i data-feather="instagram"></i></a>
+        <a href="#"><i data-feather="twitter"></i></a>
+        <a href="#"><i data-feather="facebook"></i></a>
+      </div>
 
+      <div class="links">
+        <a href="#home">Home</a>
+        <a href="#about">Tentang Kami</a>
+        <a href="#menu">Menu</a>
+        <a href="#contact">Kontak</a>
+      </div>
+
+      <div class="credit">
+        <p>Created by <a href="">M wahid romdoni</a>. | &copy; 2023.</p>
+      </div>
+    </footer>
     <!-- Footer end -->
 
     <!-- Modal Box Item Detail start -->
