Pesan commit Anda di sini

--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
   <body>
     <!-- Navbar start -->
     <nav class="navbar">
-      <a href="/index.html" class="navbar-logo">Warung<span>Pak Toni</span>.</a>
+      <a href="https://revealdone.github.io/warungpaktoni/" class="navbar-logo"
+        >Warung <span>Pak Toni</span>.</a
+      >
 
       <div class="navbar-nav">
         <a href="#home">Home</a>
         <a href="#about">Tentang Kami</a>
         <a href="/menut.html">Menu</a>
-        <a href="#products">Produk</a>
+        <a href="/prodak.html">Dokumentasi</a>
         <a href="#contact">Kontak</a>
       </div>
 
@@ -50,14 +52,16 @@
       <!-- Search Form end -->
 
       <!-- Shopping Cart start -->
-      <div class="shopping-cart">
+      <div class="shopping-cart" id="#belanja">
         <div class="cart-item">
           <img src="img/products/cleo.jpeg" alt="Product 1" />
           <div class="item-detail">
             <h3>Cleo Galon</h3>
             <div class="item-price">IDR 20K</div>
           </div>
-          <i data-feather="trash-2" class="remove-item"></i>
+          <a href="https://wa.link/e0ztx1">
+            <i data-feather="trash-2" class="remove-item"></i
+          ></a>
         </div>
         <div class="cart-item">
           <img src="img/products/gas3.jpg" alt="Product 1" />
@@ -65,7 +69,9 @@
             <h3>Gas 3KG</h3>
             <div class="item-price">IDR 20K</div>
           </div>
-          <i data-feather="trash-2" class="remove-item"></i>
+          <a href="https://wa.link/y11om5">
+            <i data-feather="trash-2" class="remove-item"></i
+          ></a>
         </div>
         <div class="cart-item">
           <img src="img/products/gas12.jpg" alt="Product 1" />
@@ -73,7 +79,9 @@
             <h3>Gas 12KG</h3>
             <div class="item-price">IDR 230K</div>
           </div>
-          <i data-feather="trash-2" class="remove-item"></i>
+          <a href="https://wa.link/jv2jd6">
+            <i data-feather="trash-2" class="remove-item"></i
+          ></a>
         </div>
         <div class="cart-item">
           <img src="img/products/aq.jpg" alt="Product 1" />
@@ -81,7 +89,9 @@
             <h3>Aqua Galon</h3>
             <div class="item-price">IDR 20K</div>
           </div>
-          <i data-feather="trash-2" class="remove-item"></i>
+          <a href="https://wa.link/3jv021">
+            <i data-feather="trash-2" class="remove-item"></i
+          ></a>
         </div>
         <div class="cart-item">
           <img src="img/products/pulsa.png" alt="Product 1" />
@@ -89,7 +99,9 @@
             <h3>Pulsa All Operator</h3>
             <div class="item-price">IDR 12/22/27/32K dst.</div>
           </div>
-          <i data-feather="trash-2" class="remove-item"></i>
+          <a href="https://wa.link/rlfdez">
+            <i data-feather="trash-2" class="remove-item"></i
+          ></a>
         </div>
         <div class="cart-item">
           <img src="img/products/listrik.png" alt="Product 1" />
@@ -97,7 +109,9 @@
             <h3>Maintenance Listrik</h3>
             <div class="item-price">IDR ~`0K</div>
           </div>
-          <i data-feather="trash-2" class="remove-item"></i>
+          <a href="https://wa.link/havs5o">
+            <i data-feather="trash-2" class="remove-item"></i
+          ></a>
         </div>
         <div class="cart-item">
           <img src="img/products/ngaji.png" alt="Product 1" />
@@ -105,13 +119,22 @@
             <h3>Mengaji</h3>
             <div class="item-price">Berminat?</div>
           </div>
-          <i data-feather="trash-2" class="remove-item"></i>
+          <a href="https://wa.link/wx59zi">
+            <i data-feather="trash-2" class="remove-item"></i
+          ></a>
+        </div>
+        <div class="cart-item">
+          <img src="" alt="" />
+          <div class="item-detail">
+            <h3>Beli Sekarang</h3>
+            <div class="item-price">klik Gambar tong untuk membeli</div>
+          </div>
         </div>
       </div>
       <!-- Shopping Cart end -->
     </nav>
     <!-- Navbar end -->
-
+    <!-- Hero Section start -->
     <!-- Menu Section start -->
     <section id="menu" class="menu">
       <h2><span>Menu</span> Kami</h2>
@@ -123,86 +146,149 @@
         terbaik demi kenyamanan dan kebahagiaan Anda. Bersama kami, Anda bukan
         sekadar pelanggan, tetapi juga keluarga.
       </p>
-
-      <div class="row">
-        <div class="menu-card">
-          <img
-            src="/img/products/gas3.jpg"
-            alt="Espresso"
-            class="menu-card-img"
-          />
-          <h3 class="menu-card-title">- Gas 3kg -</h3>
-          <p class="menu-card-price">IDR 20K</p>
-          <a href="https://wa.link/y11om5"><h1>Buy</h1></a>
+      <section id="menu" class="menu">
+        <div class="row">
+          <div class="menu-card">
+            <img
+              src="/img/products/gas3.jpg"
+              alt="Espresso"
+              class="menu-card-img"
+            />
+            <h3 class="menu-card-title">- Gas 3kg -</h3>
+            <p class="menu-card-price">IDR 20K</p>
+            <a href="https://wa.link/y11om5"><h1>Buy</h1></a>
+          </div>
+          <div class="menu-card">
+            <img
+              src="/img/products/gas12.jpg"
+              alt="Espresso"
+              class="menu-card-img"
+            />
+            <h3 class="menu-card-title">- Gas 12kg -</h3>
+            <p class="menu-card-price">IDR 230K</p>
+            <a href="https://wa.link/jv2jd6"><h1>Buy</h1></a>
+          </div>
+          <div class="menu-card">
+            <img
+              src="/img/products/aq.jpg"
+              alt="Espresso"
+              class="menu-card-img"
+            />
+            <h3 class="menu-card-title">- Aqua Galon -</h3>
+            <p class="menu-card-price">IDR 20K</p>
+            <a href="https://wa.link/3jv021"><h1>Buy</h1></a>
+          </div>
+          <div class="menu-card">
+            <img
+              src="/img/products/cleo.jpeg"
+              alt="Espresso"
+              class="menu-card-img"
+            />
+            <h3 class="menu-card-title">- Cleo Galon -</h3>
+            <p class="menu-card-price">IDR 20K</p>
+            <a href="https://wa.link/e0ztx1"><h1>Buy</h1></a>
+          </div>
+          <div class="menu-card">
+            <img
+              src="/img/products/pulsa.png"
+              alt="Espresso"
+              class="menu-card-img"
+            />
+            <h3 class="menu-card-title">- All Operator -</h3>
+            <p class="menu-card-price">IDR 12/22/27/32/52K dll</p>
+            <a href="https://wa.link/rlfdez"><h1>Buy</h1></a>
+          </div>
+          <div class="menu-card">
+            <img
+              src="/img/products/ngaji.png"
+              alt="Espresso"
+              class="menu-card-img"
+            />
+            <h3 class="menu-card-title">- Mengaji -</h3>
+            <p class="menu-card-price"></p>
+            <a href="https://wa.link/wx59zi"><h1>Ikut sekarang</h1></a>
+          </div>
+          <div class="menu-card">
+            <img
+              src="/img/products/listrik.png"
+              alt="Espresso"
+              class="menu-card-img"
+            />
+            <h3 class="menu-card-title">- Benerin Listrik -</h3>
+            <p class="menu-card-price"></p>
+            <a href="https://wa.link/havs5o"><h1>Telpon Sekarang</h1></a>
+          </div>
         </div>
-        <div class="menu-card">
-          <img
-            src="/img/products/gas12.jpg"
-            alt="Espresso"
-            class="menu-card-img"
-          />
-          <h3 class="menu-card-title">- Gas 12kg -</h3>
-          <p class="menu-card-price">IDR 230K</p>
-          <a href="https://wa.link/jv2jd6"><h1>Buy</h1></a>
+        <div class="product-nm">
+          <a
+            href="https://revealdone.github.io/warungpaktoni/"
+            class="product-nm"
+            ><h1>Kembali Ke Awal</h1></a
+          >
         </div>
-        <div class="menu-card">
-          <img
-            src="/img/products/aq.jpg"
-            alt="Espresso"
-            class="menu-card-img"
-          />
-          <h3 class="menu-card-title">- Aqua Galon -</h3>
-          <p class="menu-card-price">IDR 20K</p>
-          <a href="https://wa.link/3jv021"><h1>Buy</h1></a>
-        </div>
-        <div class="menu-card">
-          <img
-            src="/img/products/cleo.jpeg"
-            alt="Espresso"
-            class="menu-card-img"
-          />
-          <h3 class="menu-card-title">- Cleo Galon -</h3>
-          <p class="menu-card-price">IDR 20K</p>
-          <a href="https://wa.link/e0ztx1"><h1>Buy</h1></a>
-        </div>
-        <div class="menu-card">
-          <img
-            src="/img/products/pulsa.png"
-            alt="Espresso"
-            class="menu-card-img"
-          />
-          <h3 class="menu-card-title">- All Operator -</h3>
-          <p class="menu-card-price">IDR 12/22/27/32/52K dll</p>
-          <a href="https://wa.link/rlfdez"><h1>Buy</h1></a>
-        </div>
-        <div class="menu-card">
-          <img
-            src="/img/products/ngaji.png"
-            alt="Espresso"
-            class="menu-card-img"
-          />
-          <h3 class="menu-card-title">- Mengaji -</h3>
-          <p class="menu-card-price"></p>
-          <a href="https://wa.link/wx59zi"><h1>Ikut sekarang</h1></a>
-        </div>
-        <div class="menu-card">
-          <img
-            src="/img/products/listrik.png"
-            alt="Espresso"
-            class="menu-card-img"
-          />
-          <h3 class="menu-card-title">- Benerin Listrik -</h3>
-          <p class="menu-card-price"></p>
-          <a href="https://wa.link/havs5o"><h1>Telpon Sekarang</h1></a>
-        </div>
-      </div>
-      <div class="product-nm">
-        <a href="/index.html" class="product-nm"><h1>Kembali Ke Awal</h1></a>
-      </div>
-      <a href="/prodak.html" class="product-nm"
-        ><h1>Menuju ke Dokumentasi</h1></a
-      >
+        <a href="/prodak.html" class="product-nm"
+          ><h1>Menuju ke Dokumentasi</h1></a
+        >
+      </section>
     </section>
-    <!-- Menu Section end -->
+    <!-- Footer start -->
+    <footer>
+      <div class="socials">
+        <a href="#"><i data-feather="instagram"></i></a>
+        <a href="#"><i data-feather="twitter"></i></a>
+        <a href="#"><i data-feather="facebook"></i></a>
+      </div>
+
+      <div class="links">
+        <a href="#home">Home</a>
+        <a href="#about">Tentang Kami</a>
+        <a href="#menu">Menu</a>
+        <a href="#contact">Kontak</a>
+      </div>
+
+      <div class="credit">
+        <p>Created by <a href="">M wahid romdoni</a>. | &copy; 2023.</p>
+      </div>
+    </footer>
+    <!-- Footer end -->
+
+    <!-- Modal Box Item Detail start -->
+    <div class="modal" id="item-detail-modal">
+      <div class="modal-container">
+        <a href="#" class="close-icon"><i data-feather="x"></i></a>
+        <div class="modal-content">
+          <img src="img/products/1.jpg" alt="Product 1" />
+          <div class="product-content">
+            <h3>Product 1</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Provident, tenetur cupiditate facilis obcaecati ullam maiores
+              minima quos perspiciatis similique itaque, esse rerum eius
+              repellendus voluptatibus!
+            </p>
+            <div class="product-stars">
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star"></i>
+            </div>
+            <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+            <a href="#"
+              ><i data-feather="shopping-cart"></i> <span>add to cart</span></a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Modal Box Item Detail end -->
+
+    <!-- Feather Icons -->
+    <script>
+      feather.replace();
+    </script>
+
+    <!-- My Javascript -->
+    <script src="js/script.js"></script>
   </body>
 </html>
