Pesan commit Anda di sini

--- a/index.html
+++ b/index.html
@@ -136,72 +136,174 @@
     <!-- Navbar end -->
     <!-- Hero Section start -->
     <!-- Menu Section start -->
-    <section id="menu" class="menu">
-      <h2><span>Menu</span> Kami</h2>
-      <p>
-        Seiring berjalannya waktu, kami selalu berusaha meningkatkan layanan dan
-        kualitas produk untuk memenuhi harapan pelanggan setia kami. Terima
-        kasih telah mempercayai kami sebagai bagian penting dalam kehidupan
-        sehari-hari Anda. Kami berkomitmen untuk terus memberikan pelayanan
-        terbaik demi kenyamanan dan kebahagiaan Anda. Bersama kami, Anda bukan
-        sekadar pelanggan, tetapi juga keluarga.
-      </p>
-      <section id="menu" class="menu">
+    <section class="products" id="produk">
+      <h2><span>Berikut Dokumentasi </span>Pengajian Kami</h2>
+      <p>Beberapa dokumentasi dalam pengajian dan Lomba azan</p>
+
+      <div class="row">
+        <div class="product-card">
+          <div class="product-icons">
+            <a href="https://wa.link/y11om5"><i data-feather="shopping-cart"></i></a>
+            <a href="#" class="item-detail-button"
+              ><i data-feather="eye"></i
+            ></a>
+          </div>
+          <div class="product-image">
+            <img src="img/products/gas3.jpg" alt="Product 1" />
+          </div>
+          <div class="product-content">
+            <h3>Gas 3KG</h3>
+            <div class="product-stars">
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star"></i>
+            </div>
+            <div class="product-price">LDR 20K <span> LDR 25K </span></div>
+          </div>
+        </div>
         <div class="row">
-          <div class="menu-card">
-            <img src="/img/products/gas3.jpg" alt="" class="menu-card-img" />
-            <h3 class="menu-card-title">- Gas 3kg -</h3>
-            <p class="menu-card-price">IDR 20K</p>
-            <a href="https://wa.link/y11om5"><h1>Buy</h1></a>
+          <div class="product-card">
+            <div class="product-icons">
+              <a href="https://wa.link/jv2jd6"><i data-feather="shopping-cart"></i></a>
+              <a href="#" class="item-detail-button"
+                ><i data-feather="eye"></i
+              ></a>
+            </div>
+          <div class="product-image">
+            <img src="img/products/gas12.jpg" alt="Product 1" />
           </div>
-          <div class="menu-card">
-            <img src="/img/products/gas12.jpg" alt="" class="menu-card-img" />
-            <h3 class="menu-card-title">- Gas 12kg -</h3>
-            <p class="menu-card-price">IDR 230K</p>
-            <a href="https://wa.link/jv2jd6"><h1>Buy</h1></a>
-          </div>
-          <div class="menu-card">
-            <img src="/img/products/aq.jpg" alt="" class="menu-card-img" />
-            <h3 class="menu-card-title">- Aqua Galon -</h3>
-            <p class="menu-card-price">IDR 20K</p>
-            <a href="https://wa.link/3jv021"><h1>Buy</h1></a>
-          </div>
-          <div class="menu-card">
-            <img src="/img/products/cleo.jpeg" alt="" class="menu-card-img" />
-            <h3 class="menu-card-title">- Cleo Galon -</h3>
-            <p class="menu-card-price">IDR 20K</p>
-            <a href="https://wa.link/e0ztx1"><h1>Buy</h1></a>
-          </div>
-          <div class="menu-card">
-            <img src="/img/products/pulsa.png" alt="" class="menu-card-img" />
-            <h3 class="menu-card-title">- All Operator -</h3>
-            <p class="menu-card-price">IDR 12/22/27/32/52K dll</p>
-            <a href="https://wa.link/rlfdez"><h1>Buy</h1></a>
-          </div>
-          <div class="menu-card">
-            <img src="/img/products/ngaji.png" alt="" class="menu-card-img" />
-            <h3 class="menu-card-title">- Mengaji -</h3>
-            <p class="menu-card-price"></p>
-            <a href="https://wa.link/wx59zi"><h1>Ikut sekarang</h1></a>
-          </div>
-          <div class="menu-card">
-            <img src="/img/products/listrik.png" alt="" class="menu-card-img" />
-            <h3 class="menu-card-title">- Benerin Listrik -</h3>
-            <p class="menu-card-price"></p>
-            <a href="https://wa.link/havs5o"><h1>Telpon Sekarang</h1></a>
+          <div class="product-content">
+            <h3>Gas 12KG</h3>
+            <div class="product-stars">
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star"></i>
+            </div>
+            <div class="product-price">LDR 230K<span>LDR 250K</span></div>
           </div>
         </div>
-        <div class="product-nm">
-          <a
-            href="https://revealdone.github.io/warungpaktoni/"
-            class="product-nm"
-            ><h1>Kembali Ke Awal</h1></a
-          >
+        <div class="product-card">
+          <div class="product-icons">
+            <a href="https://wa.link/3jv021"><i data-feather="shopping-cart"></i></a>
+            <a href="#" class="item-detail-button"
+              ><i data-feather="eye"></i
+            ></a>
+          </div>
+          <div class="product-image">
+            <img src="img/products/aq.jpg" alt="Product 1" />
+          </div>
+          <div class="product-content">
+            <h3>Aqua Galon</h3>
+            <div class="product-stars">
+              <i data-feather="star"></i>
+              <i data-feather="star"></i>
+              <i data-feather="star"></i>
+              <i data-feather="star"></i>
+              <i data-feather="star"></i>
+            </div>
+            <div class="product-price">LDR 20K<span>LDR 25K</span></div>
+          </div>
         </div>
-        <a href="https://revealdone.github.io/dokumen/" class="product-nm"
-          ><h1>Menuju ke Dokumentasi</h1></a
-        >
-      </section>
+        <div class="product-card">
+          <div class="product-icons">
+            <a href="https://wa.link/e0ztx1"><i data-feather="shopping-cart"></i></a>
+            <a href="#" class="item-detail-button"
+              ><i data-feather="eye"></i
+            ></a>
+          </div>
+          <div class="product-image">
+            <img src="img/products/cleo.jpeg" alt="Product 1" />
+          </div>
+          <div class="product-content">
+            <h3>Cleo Galon</h3>
+            <div class="product-stars">
+              <i data-feather="star"></i>
+              <i data-feather="star"></i>
+              <i data-feather="star"></i>
+              <i data-feather="star"></i>
+              <i data-feather="star"></i>
+            </div>
+            <div class="product-price">LDR 20K<span>LDR 25K</span></div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="product-card">
+          <div class="product-icons">
+            <a href="https://wa.link/wx59zi"><i data-feather="shopping-cart"></i></a>
+            <a href="#" class="item-detail-button"
+              ><i data-feather="eye"></i
+            ></a>
+          </div>
+        <div class="product-image">
+          <img src="img/products/ngaji.png" alt="Product 1" />
+        </div>
+        <div class="product-content">
+          <h3>Mengaji</h3>
+          <div class="product-stars">
+            <i data-feather="star" class="star-full"></i>
+            <i data-feather="star" class="star-full"></i>
+            <i data-feather="star" class="star-full"></i>
+            <i data-feather="star" class="star-full"></i>
+            <i data-feather="star"></i>
+          </div>
+          <div class="product-price">Pengajian senin-rabu & jum`at di masjid al itihad<span></span></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="product-card">
+          <div class="product-icons">
+            <a href="https://wa.link/havs5o"><i data-feather="shopping-cart"></i></a>
+            <a href="#" class="item-detail-button"
+              ><i data-feather="eye"></i
+            ></a>
+          </div>
+        <div class="product-image">
+          <img src="img/products/listrik.png" alt="Product 1" />
+        </div>
+        <div class="product-content">
+          <h3>Benerin Listrik</h3>
+          <div class="product-stars">
+            <i data-feather="star" class="star-full"></i>
+            <i data-feather="star" class="star-full"></i>
+            <i data-feather="star" class="star-full"></i>
+            <i data-feather="star" class="star-full"></i>
+            <i data-feather="star"></i>
+          </div>
+          <div class="product-price">Instalasi Listrik<span>Listrik Konslet</span></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="product-card">
+          <div class="product-icons">
+            <a href="https://wa.link/rlfdez"><i data-feather="shopping-cart"></i></a>
+            <a href="#" class="item-detail-button"
+              ><i data-feather="eye"></i
+            ></a>
+          </div>
+        <div class="product-image">
+          <img src="img/products/pulsa.png" alt="Product 1" />
+        </div>
+        <div class="product-content">
+          <h3>ALL Operator</h3>
+          <div class="product-stars">
+            <i data-feather="star" class="star-full"></i>
+            <i data-feather="star" class="star-full"></i>
+            <i data-feather="star" class="star-full"></i>
+            <i data-feather="star" class="star-full"></i>
+            <i data-feather="star"></i>
+          </div>
+          <div class="product-price">LDR 12k/22k/32k/52k/Berbagai macam nominal<span></span></div>
+        </div>
+      </div>
+      <div class="row">
+        <a href="https://revealdone.github.io/warungpaktoni/#" class="product-nm"><h1>Kembali Ke Awal</h1></a>
+      </div>
+      <a href="https://revealdone.github.io/dokumen/#" class="product-nm"><h1>Menuju ke Dokumentasi</h1></a>
     </section>
     <!-- Footer start -->
     <footer>
