Pesan commit Anda di sini

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
     <!-- Hero Section start -->
     <!-- Menu Section start -->
     <section class="products" id="produk">
-      <h2><span>Berikut Dokumentasi </span>Pengajian Kami</h2>
-      <p>Beberapa dokumentasi dalam pengajian dan Lomba azan</p>
+      <h2><span>Berikut Daftar </span>Menu Kami</h2>
+      <p>Beberapa Daftar Menu yang kami punya</p>
 
       <div class="row">
         <div class="product-card">
