Pesan commit Anda di sini

--- a/index.html
+++ b/index.html
@@ -333,12 +333,9 @@
         <div class="modal-content">
           <img src="img/products/1.jpg" alt="Product 1" />
           <div class="product-content">
-            <h3>Product 1</h3>
+            <h3>Terimakasih telah melihat detail product 🤞</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Provident, tenetur cupiditate facilis obcaecati ullam maiores
-              minima quos perspiciatis similique itaque, esse rerum eius
-              repellendus voluptatibus!
+              mohon maaf Kami masih dalam pengembangan di proses ini 🙌
             </p>
             <div class="product-stars">
               <i data-feather="star" class="star-full"></i>
